--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,4 +43,6 @@ jobs:
             ${{ env.CI_REGISTRY_IMAGE }}:${{ steps.serialize_branch.outputs.branch }}
             ${{ env.CI_REGISTRY_IMAGE }}:${{ github.sha }}
           labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
